Integration wiht hashlips

--- a/myepicproject/Anchor.toml
+++ b/myepicproject/Anchor.toml
@@ -2,14 +2,14 @@
 seeds = false
 skip-lint = false
 [programs.devnet]
-myepicproject = "3MbNLMpDptCDdbr4eWKwjvsmQA3mJjcwHczcBLoWtwrM"
+myepicproject = "CR5DnpzdCjRv6rYT9ocxkxmJJsMesuZPvj14kNa7MfaN"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
-wallet = "/Users/atreides/.config/solana/id.json"
+cluster = "localnet"
+wallet = "/home/tadeo/gitlab/solana/keys/local-tam.json"
 
 [scripts]
 test = "node tests/myepicproject.js"
