--- a/React-CPI-PDA/Anchor.toml
+++ b/React-CPI-PDA/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
 [programs.localnet]
-cpipda = "6UBeznVw8PWyhVPa9Sk99nMTR8C5GUt2k535ov4Pqvfg"
-proxy = "HKbTE9zSwQFx1vaXGxSe7EyFqdrmVyiEyeeuLWVwPo7W"
+cpipda = "ACZZdHNuhnvbrjE3DRVGdqg7X2NzKJAYGiEAd5bpA1sv"
+proxy = "3GhBo6kSG4519BGNj346DLS6S427UBvq1hfSctTA6qzx"
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/home/knox/.config/solana/id.json"
+wallet = "/home/tadeo/gitlab/solana/keys/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
